--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -9,7 +9,7 @@
         <br>
         <div class="row justify-content-between">
 
-            <div class="col-md-4 ml-5 border rounded "><br>
+            <div class="col-md-4 ml-5 pCard border rounded "><br>
                 <h4 class="text-center ">Change Account Password</h4>
                 <br>
                 <form action="/changeaccpass" method="POST">
@@ -37,7 +37,7 @@
                 </form>
             </div>
         </div>
-        <div class="col-md-4 mr-5 float-right border rounded "><br>
+        <div class="col-md-4 mr-5 pCard float-right border rounded "><br>
             <h4 class="text-center ">Change DOP_ID Password</h4>
             <br>
             <form action="/changedoppass" method="POST">
@@ -69,6 +69,10 @@
     </div>
 </section>
 <style>
+    section{
+    padding-top: 50px;
+
+    }
     .border {
         box-shadow: 0 0 10px 0 rgba(73, 73, 73, 0.5);
     }
@@ -77,5 +81,8 @@
     input::-webkit-inner-spin-button {
         -webkit-appearance: none;
         margin: 0;
+    }
+    .pCard{
+        background-color: rgb(189, 216, 238);
     }
 </style>
