--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -7,13 +7,19 @@
 
                 <div class="form-group">
                     <label for="number">Account Number</label>
-                    <input type="number" class="form-control" name="Number" id="Number" placeholder="Account Number">
+                    <input type="number" class="form-control" name="Number" id="Number">
                 </div>
 
 
                 <button type="submit" class="btn btn-primary">Delete Account</button>
-                <a href="/" class="btn btn-primary">Cancel</a>
+                <a href="/" class="btn btn-danger">Cancel</a>
             </form>
         </div>
     </div>
 </div>
+<style>
+    .container {
+        padding-top: 70px;
+        width: 40vw;
+    }
+</style>
