--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,7 @@
-<div class="container mt-5">
     <section>
-        <div class="col-md-4 m-auto border rounded" id="model"><br>
+
+<div class="container mt-5">
+        <div class="col-md-4 ml-auto border rounded" id="model"><br>
             <h2 class="text-center"  style="font-weight: normal;">Login Here..</h2>
             <form action="/login"  method="POST">
                 <div class="form-group">
@@ -23,9 +24,13 @@
             <br><br>   
         </div>
 
-    </section>
 </div>
+    </section>
+
 <style>
+    section{
+        padding-top: 70px;
+    }
     form{
         align-items: center;
         margin-top: 60px;
