--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,7 +1,7 @@
 <header>
-    <nav class="navbar navbar-expand-lg " style="background-color: #1C2331">
+    <nav class="navbar navbar-expand-lg" style="background-color: #1C2331">
         <a class="navbar-brand" href="/" style="color: white">
-            <h3 style="font-weight:normal">DOP Agent Automator</h3>
+            <h3 style="font-weight:normal">DOP Agent Automator 2.0</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,17 +9,58 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-                {{#if user}}
-                <a class="btn btn-success mr-2" href="/add">Add Account </a>
-                <a class="btn btn-secondary mr-2" href="/delete">Delete Account </a>
-                <a class="btn btn-primary mr-2" href="/final">Final List </a>
-                <a class="btn btn-info mr-2" href="/changepassword">Change Password</a>
-                <a class="btn btn-outline-success ml-2" href="/logout">Logout</a>
-                {{else}}
-                <a class="btn btn-outline-success mr-2" href="/login">Login</a>
-                {{/if}}
-            </div>
+            <ul class=" ml-auto navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-expanded="false">
+                        <img class="menu" src="https://img.icons8.com/metro/344/ffffff/menu.png" alt="" srcset="">
+
+                    </a>
+                    <div class="dropdown-menu p-0" style="right: 0; left: auto;"
+                        aria-labelledby="navbarDropdownMenuLink">
+                        {{#if user}}
+
+                        <a class="dropdown-item" href="/add">Add Account </a>
+                        <a class="dropdown-item" href="/delete">Delete Account </a>
+                        <a class="dropdown-item" href="/final">Final List </a>
+                        <a class="dropdown-item" href="/changepassword">Change Password</a>
+                        <a class="dropdown-item" href="/logout">Logout</a>
+
+                        {{else}}
+                        <a class="dropdown-item" href="/login">Login</a>
+                        {{/if}}
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
+<style>
+    header{
+        position: fixed;
+        width: 100vw;
+        z-index: 1000;
+        margin-bottom:10px;
+            }
+    .menu {
+        height: 20px;
+        object-fit: contain;
+    }
+
+    .dropdown-item {
+        border-bottom: 1px solid lightgray;
+        padding: 10px;
+    }
+
+    .dropdown-item:active {
+        background-color: #57C67F;
+    }
+
+    .dropdown-item:hover {
+        background-color: lightgray;
+    }
+
+    .dropdown-toggle::after {
+        color: transparent;
+    }
+</style>
